# tda_repr

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  README.txt  pyproject.toml  reproduction_cases.sh  reproduction_runs.sh  requirements.txt
.github/workflows/: ci.yml  release.yml
.mplconfig/: fontlist-v390.json
local_scripts/: resume_one_epoch.py
reproduction/tables/: arch_comparison.tex  correlation_summary_cv.tex  correlation_summary_nlp.tex  depth_dynamics_cv.tex  depth_dynamics_nlp.tex  early_stopping.tex  early_stopping_best.tex  layer_candidates_distilbert_trec6.tex  layer_candidates_efficientnet_bloodmnist.tex  layer_candidates_efficientnet_imagenette.tex  layer_selection_detailed.tex  layer_selection_summary.tex
tda_repr/: __init__.py
tda_repr/cli/: layers.py
tda_repr/data/: __init__.py  registry.py
tda_repr/models/: __init__.py  hooks.py  layers.py  registry.py
tda_repr/mtd/: __init__.py  mtopdiv.py
tda_repr/spectral/: __init__.py  persistent.py
tda_repr/training/: __init__.py  benchmarks.py  monitor.py  results.py  tracker.py
tda_repr/viz/: __init__.py  runlog.py
tests/: __init__.py  layers_selection.py  reproduction_tables_utils.py  runstore.py  smoke_model_layers.py  smoke_persistent_schur.py  smoke_train_monitor.py  smoke_train_monitor_persistent_q1.py  smoke_train_text_monitor.py  test_persistent_schur.py  test_registry_layers_exist.py
tools/: _shared.py  apply_repr_early_stop_rule.py  correlation_report.py  evaluate_embeddings.py  model_layers.py  paper.py  plot_run_metric.py  print_model_arch.py  repr_early_stop_sweep.py  reproduce_pictures.py  reproduce_tables.py  run_experiment.py
tools/aggregate/: aggregate_layer_selection_summary.py  apply_early_stop_rules.py  embedding_selection.py  layer_tables_from_embeddings.py  paper_aggregate_tables.py  reproduction_paths.py  reproduction_tables.py  run_meta.py  select_early_stop_rules.py  tables_corr_summary.py  tables_depth_arch.py  write_early_stopping_tables.py
tools/figures/: fig_early_stopping_case.py  fig_early_stopping_triplet_case.py  fig_layerwise_descriptor_dynamics.py  fig_mtopdiv_best_layer_dynamics.py  fig_trec6_distilbert_neighbors.py  i18n.py  reproduction_figures.py
tools/paper/: fig_early_stopping_case.py  fig_early_stopping_triplet_case.py  fig_layerwise_descriptor_dynamics.py  fig_mtopdiv_best_layer_dynamics.py  layer_selection_eval.py  neighbor_counterexample.py  tables_corr_summary.py  tables_depth_arch.py  tables_early_stop_ensemble.py  tables_early_stop_single.py  tables_layer_rel_dev.py  tables_layer_selection.py
